--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -21,10 +21,17 @@ $shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
 $query: 992px;
 
 $timming-1: .4s;
-$timming-2: $timming-1*2;
-$timming-3: $timming-1*3;
-$timming-4: $timming-1*4;
+$timming-2: $timming-1 + $timming-1 ;
+$timming-3: $timming-2 + $timming-1 ;
+$timming-4: $timming-3 + $timming-1 ;
+$timming-5: $timming-4 + $timming-1 + .2s;
+$timming-6: $timming-5 +$timming-1 ;
+$timming-7: $timming-6 + $timming-1 ;
+$timming-8: $timming-7 + $timming-1 + .2s;
+$timming-9: $timming-8 + $timming-1 ;
+$timming-10: $timming-9 + $timming-1 ;
+$timming-btn: $timming-10 + $timming-1;
 
 $timming-entrees: .2s;
-$timming-plats: $timming-entrees*2;
-$timming-desserts: $timming-entrees*3;
+$timming-plats: $timming-4 + $timming-entrees;
+$timming-desserts: $timming-7 + $timming-entrees;
